# tetrika_test_assignment

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
task1/: subtask1.py  subtask2.py
task2/: main.py
task3/: main.py
tests/task1/: test_subtask1.py  test_subtask2.py
tests/task2/: test_task2.py
tests/task2/fixtures/: expected.txt
tests/task3/: test_task3.py
